# Baldness-Tracking

./: .gitignore  README.md  app.py  database.py  pyproject.toml
